Small bug fixed

--- a/EuroMobileApp/EuroMobileApp/App.xaml
+++ b/EuroMobileApp/EuroMobileApp/App.xaml
@@ -179,185 +179,96 @@
                     </Grid>
                 </AbsoluteLayout>
             </ControlTemplate>
-            <DataTemplate x:Key="WorkOrderPartTemplate">
-                <SwipeView>
-                    <SwipeView.RightItems>
-                        <SwipeItems Mode="Reveal">
+            <ControlTemplate x:Key="EuroSignatureViewMasterTemplate">
+                <AbsoluteLayout AbsoluteLayout.LayoutBounds="1,1,1,1" AbsoluteLayout.LayoutFlags="All">
+                    <Grid AbsoluteLayout.LayoutBounds="1,1,1,1" AbsoluteLayout.LayoutFlags="All">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="{OnPlatform Android=100, iOS=150}" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
 
+                        <ContentPresenter Grid.Row="0" />
+                        <StackLayout
+                            Grid.Row="1"
+                            Margin="5,10,5,10"
+                            Spacing="10"
+                            VerticalOptions="End">
+                            <Yummy:PancakeView Border="{Yummy:BorderMarkup Color={DynamicResource black}, Thickness=1}" HeightRequest="50">
 
-                            <SwipeItemView
-                                Margin="0"
-                                Padding="0"
-                                BackgroundColor="{DynamicResource IndianRed}"
-                                Command="{Binding Path=BindingContext.DeletePartCommand, Source={x:Reference Name=workOrderPage}}"
-                                CommandParameter="{Binding .}">
-                                <StackLayout
-                                    BackgroundColor="{DynamicResource IndianRed}"
-                                    HorizontalOptions="Center"
-                                    VerticalOptions="Center">
-                                    <Frame
-                                        Padding="0"
-                                        BackgroundColor="{DynamicResource IndianRed}"
-                                        CornerRadius="5"
-                                        HasShadow="False"
-                                        HorizontalOptions="FillAndExpand"
-                                        VerticalOptions="FillAndExpand">
-
-                                        <StackLayout
-                                            Padding="15"
-                                            Spacing="2"
-                                            VerticalOptions="Center">
-                                            <Label TextColor="{DynamicResource WhiteColor}">
-                                                <Label.FormattedText>
-                                                    <FormattedString>
-                                                        <Span
-                                                            FontFamily="{StaticResource FontAwesomeIconSolid}"
-                                                            FontSize="Small"
-                                                            Text="{x:Static Icons:IconFonts.Trash}" />
-
-                                                    </FormattedString>
-                                                </Label.FormattedText>
-                                            </Label>
-                                        </StackLayout>
-                                    </Frame>
-                                </StackLayout>
-                            </SwipeItemView>
-                            <SwipeItemView
-                                Margin="0"
-                                Padding="0"
-                                BackgroundColor="{DynamicResource blueDark}"
-                                Command="{Binding Path=BindingContext.EditPartCommand, Source={x:Reference Name=workOrderPage}}"
-                                CommandParameter="{Binding .}">
-                                <StackLayout
-                                    BackgroundColor="{DynamicResource transparent}"
-                                    HorizontalOptions="Center"
-                                    VerticalOptions="Center">
-                                    <Frame
-                                        Padding="0"
-                                        BackgroundColor="{DynamicResource blueDark}"
-                                        CornerRadius="5"
-                                        HasShadow="False"
-                                        HorizontalOptions="FillAndExpand"
-                                        VerticalOptions="FillAndExpand">
-
-                                        <StackLayout
-                                            Padding="15"
-                                            Spacing="2"
-                                            VerticalOptions="Center">
-                                            <Label TextColor="{DynamicResource WhiteColor}">
-                                                <Label.FormattedText>
-                                                    <FormattedString>
-                                                        <Span
-                                                            FontFamily="{StaticResource FontAwesomeIconSolid}"
-                                                            FontSize="Small"
-                                                            Text="{x:Static Icons:IconFonts.Edit}" />
-
-                                                    </FormattedString>
-                                                </Label.FormattedText>
-                                            </Label>
-                                        </StackLayout>
-                                    </Frame>
-                                </StackLayout>
-                            </SwipeItemView>
-                        </SwipeItems>
-                    </SwipeView.RightItems>
-                    <SwipeView.Content>
-                        <Yummy:PancakeView
-                            BackgroundColor="White"
-                            HorizontalOptions="FillAndExpand"
-                            VerticalOptions="StartAndExpand">
-                            <Grid HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                <BoxView
-                                    BackgroundColor="{DynamicResource NavigationPrimary}"
-                                    HorizontalOptions="Start"
-                                    VerticalOptions="FillAndExpand"
-                                    WidthRequest="3" />
-                                <Grid
-                                    Grid.Column="1"
-                                    ColumnDefinitions="35*,20*,15*,30*"
-                                    RowDefinitions="Auto,Auto">
-
-                                    <StackLayout
+                                <StackLayout Orientation="Horizontal" VerticalOptions="Center">
+                                    <Label
                                         Grid.Column="0"
-                                        AutomationId="ListIdLayout"
-                                        HorizontalOptions="Start"
-                                        Spacing="0">
-                                        <Label
-                                            FontSize="10"
-                                            Text="{trans:Translate PartNameLabel}"
-                                            TextColor="{DynamicResource grayDark}" />
-                                        <Label
-                                            FontAttributes="Bold"
-                                            FontSize="14"
-                                            Text="{Binding PartName}" />
-                                    </StackLayout>
-                                    <StackLayout
-                                        Grid.Row="0"
-                                        Grid.Column="1"
-                                        AutomationId="ListIdLayout"
-                                        HorizontalOptions="Start"
-                                        Spacing="0">
-                                        <Label
-                                            FontSize="10"
-                                            Text="{trans:Translate QuantityLabel}"
-                                            TextColor="{DynamicResource grayDark}" />
-                                        <Label
-                                            FontAttributes="Bold"
-                                            FontSize="16"
-                                            LineBreakMode="TailTruncation"
-                                            Text="{Binding Quantity}" />
-                                    </StackLayout>
-                                    <StackLayout
-                                        Grid.Column="2"
-                                        AutomationId="TitleLayout"
-                                        HorizontalOptions="Start"
-                                        Spacing="0">
-                                        <Label
-                                            FontSize="10"
-                                            Text="{trans:Translate RateLabel}"
-                                            TextColor="{DynamicResource grayDark}" />
-                                        <Label FontAttributes="Bold" FontSize="16">
-                                            <Label.FormattedText>
-                                                <FormattedString>
-                                                    <Span Text="$" />
-                                                    <Span Text="{Binding Rate}" />
-                                                </FormattedString>
-                                            </Label.FormattedText>
+                                        Margin="10,0,10,0"
+                                        HorizontalOptions="Start">
+                                        <Label.FormattedText>
+                                            <FormattedString>
+                                                <Span
+                                                    FontFamily="{StaticResource RobotoCondensedBold}"
+                                                    FontSize="18"
+                                                    Text="{trans:Translate OrderTotalCustomerSignature}" />
+                                                <Span Text=" " />
 
-                                        </Label>
-                                    </StackLayout>
+                                            </FormattedString>
+                                        </Label.FormattedText>
+                                    </Label>
+                                    <Label Grid.Column="1" Margin="0,0,5,0">
+                                        <Label.FormattedText>
+                                            <FormattedString>
 
-                                    <StackLayout
-                                        Grid.Column="3"
-                                        AutomationId="ListIdLayout"
-                                        HorizontalOptions="Start"
-                                        Spacing="0">
-                                        <Label
-                                            FontSize="10"
-                                            Text="{trans:Translate TotalAmountLabel}"
-                                            TextColor="{DynamicResource grayDark}" />
-                                        <Label FontAttributes="Bold" FontSize="16">
-                                            <Label.FormattedText>
-                                                <FormattedString>
-                                                    <Span Text="$" />
-                                                    <Span Text="{Binding PurchasePrice}" />
-                                                </FormattedString>
-                                            </Label.FormattedText>
-                                        </Label>
-                                    </StackLayout>
-                                </Grid>
-                            </Grid>
-                            <Yummy:PancakeView.Border>
-                                <Yummy:Border Thickness="2" Color="{DynamicResource tabBorder}" />
-                            </Yummy:PancakeView.Border>
-                        </Yummy:PancakeView>
-                    </SwipeView.Content>
-                </SwipeView>
-            </DataTemplate>
+                                                <Span Text=" " />
+                                                <Span
+                                                    FontFamily="{StaticResource RobotoCondensedBold}"
+                                                    FontSize="18"
+                                                    Text="{trans:Translate PleaseSignLabel}"
+                                                    TextColor="{DynamicResource blueDark}"
+                                                    TextDecorations="Underline">
+                                                    <Span.GestureRecognizers>
+                                                        <TapGestureRecognizer Command="{Binding PleaseSigninCommand}" />
+                                                    </Span.GestureRecognizers>
+                                                </Span>
+                                            </FormattedString>
+                                        </Label.FormattedText>
+                                    </Label>
+                                </StackLayout>
+                            </Yummy:PancakeView>
+
+                            <Yummy:PancakeView
+                                Border="{Yummy:BorderMarkup Color={DynamicResource black},
+                                                            Thickness=1}"
+                                HeightRequest="130"
+                                VerticalOptions="Center">
+                                <StackLayout>
+
+                                    <Label
+                                        FontAttributes="Italic"
+                                        FontFamily="{StaticResource RobotoCondensedBoldItalic}"
+                                        FontSize="24"
+                                        HorizontalOptions="Center"
+                                        VerticalOptions="CenterAndExpand">
+                                        <Label.FormattedText>
+                                            <FormattedString>
+                                                <Span Text="{Binding SignatureViewTitle}" />
+                                            </FormattedString>
+                                        </Label.FormattedText>
+                                    </Label>
+                                </StackLayout>
+
+                            </Yummy:PancakeView>
+                        </StackLayout>
+                        <StackLayout
+                            Grid.Row="2"
+                            IsClippedToBounds="True"
+                            Orientation="Vertical"
+                            VerticalOptions="End">
+                            <Image Aspect="AspectFill" Source="footerinnerbg.png" />
+                        </StackLayout>
+                    </Grid>
+                </AbsoluteLayout>
+            </ControlTemplate>
 
         </ResourceDictionary>
     </prism:PrismApplication.Resources>
