--- a/EuroMobileApp/EuroMobileApp/Views/SignaturePageContentView/OrderTotalContentView.xaml
+++ b/EuroMobileApp/EuroMobileApp/Views/SignaturePageContentView/OrderTotalContentView.xaml
@@ -12,81 +12,154 @@
             HorizontalOptions="FillAndExpand"
             VerticalOptions="FillAndExpand"
             VerticalScrollBarVisibility="Never">
-            <StackLayout VerticalOptions="FillAndExpand">
-                <Grid ColumnDefinitions="50*,50*">
-                    <Label
-                        Grid.Column="0"
-                        FontFamily="{StaticResource RobotoCondensedBold}"
-                        FontSize="18"
-                        HorizontalOptions="StartAndExpand"
-                        Text="{trans:Translate OrderTotalLabel}" />
-                    <Label
-                        Grid.Column="1"
-                        FontFamily="{StaticResource RobotoMedium}"
-                        FontSize="18"
-                        HorizontalOptions="EndAndExpand"
-                        Text="{Binding TotalOrder.Total}" />
-                </Grid>
-                <Grid ColumnDefinitions="50*,50*">
-                    <Label
-                        Grid.Column="0"
-                        FontFamily="{StaticResource RobotoCondensedBold}"
-                        FontSize="18"
-                        HorizontalOptions="StartAndExpand"
-                        Text="{trans:Translate OrderTotalHSTLabel}" />
-                    <Label
-                        Grid.Column="1"
-                        FontFamily="{StaticResource RobotoMedium}"
-                        FontSize="18"
-                        HorizontalOptions="EndAndExpand"
-                        Text="{Binding TotalOrder.HST}" />
-                </Grid>
-                <Grid ColumnDefinitions="50*,50*">
-                    <Label
-                        Grid.Column="0"
-                        FontFamily="{StaticResource RobotoCondensedBold}"
-                        FontSize="18"
-                        HorizontalOptions="StartAndExpand"
-                        Text="{trans:Translate OrderTotalAmountLabel}" />
-                    <Label
-                        Grid.Column="1"
-                        FontFamily="{StaticResource RobotoMedium}"
-                        FontSize="18"
-                        HorizontalOptions="EndAndExpand"
-                        Text="{Binding TotalOrder.TotalAmount}" />
-                </Grid>
-                <Grid ColumnDefinitions="50*,50*">
-                    <Label
-                        Grid.Column="0"
-                        FontFamily="{StaticResource RobotoCondensedBold}"
-                        FontSize="18"
-                        HorizontalOptions="StartAndExpand"
-                        Text="{trans:Translate OrderTotalAmountPaidLabel}" />
-                    <Label
-                        Grid.Column="1"
-                        FontFamily="{StaticResource RobotoMedium}"
-                        FontSize="18"
-                        HorizontalOptions="EndAndExpand"
-                        Text="{Binding TotalOrder.AmountPaid}" />
-                </Grid>
-                <Grid ColumnDefinitions="50*,50*">
-                    <Label
-                        Grid.Column="0"
-                        FontFamily="{StaticResource RobotoCondensedBold}"
-                        FontSize="18"
-                        HorizontalOptions="StartAndExpand"
-                        Text="{trans:Translate OrderTotalAmountDue}" />
-                    <Label
-                        Grid.Column="1"
-                        FontFamily="{StaticResource RobotoMedium}"
-                        FontSize="18"
-                        HorizontalOptions="EndAndExpand"
-                        Text="{Binding TotalOrder.TotalAmountDue}" />
-                </Grid>
+            <Grid RowDefinitions="*,auto">
+                <StackLayout Grid.Row="0" VerticalOptions="FillAndExpand">
+                    <Grid ColumnDefinitions="50*,50*">
+                        <Label
+                            Grid.Column="0"
+                            FontFamily="{StaticResource RobotoCondensedBold}"
+                            FontSize="18"
+                            HorizontalOptions="StartAndExpand"
+                            Text="{trans:Translate OrderTotalLabel}" />
+                        <Label
+                            Grid.Column="1"
+                            FontFamily="{StaticResource RobotoMedium}"
+                            FontSize="18"
+                            HorizontalOptions="EndAndExpand"
+                            Text="{Binding TotalOrder.Total}" />
+                    </Grid>
+                    <Grid ColumnDefinitions="50*,50*">
+                        <Label
+                            Grid.Column="0"
+                            FontFamily="{StaticResource RobotoCondensedBold}"
+                            FontSize="18"
+                            HorizontalOptions="StartAndExpand"
+                            Text="{trans:Translate OrderTotalHSTLabel}" />
+                        <Label
+                            Grid.Column="1"
+                            FontFamily="{StaticResource RobotoMedium}"
+                            FontSize="18"
+                            HorizontalOptions="EndAndExpand"
+                            Text="{Binding TotalOrder.HST}" />
+                    </Grid>
+                    <Grid ColumnDefinitions="50*,50*">
+                        <Label
+                            Grid.Column="0"
+                            FontFamily="{StaticResource RobotoCondensedBold}"
+                            FontSize="18"
+                            HorizontalOptions="StartAndExpand"
+                            Text="{trans:Translate OrderTotalAmountLabel}" />
+                        <Label
+                            Grid.Column="1"
+                            FontFamily="{StaticResource RobotoMedium}"
+                            FontSize="18"
+                            HorizontalOptions="EndAndExpand"
+                            Text="{Binding TotalOrder.TotalAmount}" />
+                    </Grid>
+                    <Grid ColumnDefinitions="50*,50*">
+                        <Label
+                            Grid.Column="0"
+                            FontFamily="{StaticResource RobotoCondensedBold}"
+                            FontSize="18"
+                            HorizontalOptions="StartAndExpand"
+                            Text="{trans:Translate OrderTotalAmountPaidLabel}" />
+                        <Label
+                            Grid.Column="1"
+                            FontFamily="{StaticResource RobotoMedium}"
+                            FontSize="18"
+                            HorizontalOptions="EndAndExpand"
+                            Text="{Binding TotalOrder.AmountPaid}" />
+                    </Grid>
+                    <Grid ColumnDefinitions="50*,50*">
+                        <Label
+                            Grid.Column="0"
+                            FontFamily="{StaticResource RobotoCondensedBold}"
+                            FontSize="18"
+                            HorizontalOptions="StartAndExpand"
+                            Text="{trans:Translate OrderTotalAmountDue}" />
+                        <Label
+                            Grid.Column="1"
+                            FontFamily="{StaticResource RobotoMedium}"
+                            FontSize="18"
+                            HorizontalOptions="EndAndExpand"
+                            Text="{Binding TotalOrder.TotalAmountDue}" />
+                    </Grid>
 
 
 
-            </StackLayout>
+                </StackLayout>
+                <StackLayout
+                    Grid.Row="1"
+                    Margin="5,10,5,10"
+                    Spacing="10"
+                    VerticalOptions="End">
+                    <Yummy:PancakeView Border="{Yummy:BorderMarkup Color={DynamicResource black}, Thickness=1}" HeightRequest="50">
+
+                        <StackLayout Orientation="Horizontal" VerticalOptions="Center">
+                            <Label
+                                Grid.Column="0"
+                                Margin="10,0,10,0"
+                                HorizontalOptions="Start">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span
+                                            FontFamily="{StaticResource RobotoCondensedBold}"
+                                            FontSize="16"
+                                            Text="{trans:Translate OrderTotalCustomerSignature}" />
+                                        <Span Text=" " />
+
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                            <Label
+                                Grid.Column="1"
+                                Margin="0,0,5,0"
+                                HorizontalOptions="EndAndExpand">
+                                <Label.FormattedText>
+                                    <FormattedString>
+
+                                        <Span Text=" " />
+                                        <Span
+                                            FontFamily="{StaticResource RobotoCondensedBold}"
+                                            FontSize="16"
+                                            Text="{trans:Translate PleaseSignLabel}"
+                                            TextColor="{DynamicResource blueDark}"
+                                            TextDecorations="Underline">
+                                            <Span.GestureRecognizers>
+                                                <TapGestureRecognizer Command="{Binding PleaseSigninCommand}" />
+                                            </Span.GestureRecognizers>
+                                        </Span>
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                        </StackLayout>
+                    </Yummy:PancakeView>
+
+                    <Yummy:PancakeView
+                        Border="{Yummy:BorderMarkup Color={DynamicResource black},
+                                                    Thickness=1}"
+                        HeightRequest="100"
+                        VerticalOptions="Center">
+                        <StackLayout>
+
+                            <Label
+                                FontAttributes="Italic"
+                                FontFamily="{StaticResource RobotoCondensedBoldItalic}"
+                                FontSize="24"
+                                HorizontalOptions="Center"
+                                VerticalOptions="CenterAndExpand">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span Text="{Binding SignatureViewTitle}" />
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                        </StackLayout>
+
+                    </Yummy:PancakeView>
+                </StackLayout>
+            </Grid>
+
         </ScrollView>
     </ContentView.Content>
 </ContentView>
