Small bug Fixed

--- a/EuroWebApi/Services/assets/templates/customer-invoice-email.html
+++ b/EuroWebApi/Services/assets/templates/customer-invoice-email.html
@@ -54,12 +54,12 @@
             <div class="page-body">
                 <p> Hello CUSTOMER_NAME,</p>
                 <p>
-                    Please find the attached Invoice Copy.
+                    Please see attached invoice.
                 </p>
                 <p>
                     Thanks
                     <br />
-                    Euro Team.
+                    Euro Appliance Services
                 </p>
             </div>
         </div>
